[workspace]
members = ["bastion-common", "bastion-timelock", "bastion-cerberus", "bastion-chronos", "bastion-cli"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
nix = { version = "0.29", features = ["signal", "process", "socket", "inotify", "time"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rug = "1"
