[package]
name = "bastion-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bastion"
path = "src/main.rs"

[dependencies]
bastion-common = { path = "../bastion-common" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
ed25519-dalek = { workspace = true }
rug = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
getrandom = "0.2"
